# bboxes_to_segmentation_with_SAM

./: README.md  main.py  pyproject.toml  utils.py
